--- a/cleanser/package.json
+++ b/cleanser/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Attila Bagossy",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "yargs": "^12.0.2"
+  }
 }
